--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,1 +1,7 @@
+GEMINI_API_KEY = "your_gemini_api_key"
 
+[email]
+smtp_server = "smtp.gmail.com"
+port = 465
+user = "your_email@gmail.com"
+password = "your_app_password"
